# agentkit-samples

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README.zh.md
01-tutorials/workshop/session3/: .env.template  README.md  pyproject.toml
01-tutorials/workshop/session3/E3_lark_doc/: agent.py
01-tutorials/workshop/session3/E4_volc_ops/: agent.py
01-tutorials/workshop/session3/E5_ops_kownledgebase/: agent.py
01-tutorials/workshop/session3/E6a_mail_ast_with_guard/: agent.py  colors.py  emails.json  tools.py
01-tutorials/workshop/session3/E6b_mail_ast_without_guard/: agent.py  colors.py  tools.py
python/02-use-cases/mini_aiops/mcp_server_ccapi/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
python/02-use-cases/mini_aiops/mcp_server_ccapi/src/mcp_server_ccapi/: __init__.py  cloud_control_utils.py  context.py  errors.py  infrastructure_generator.py  schema_manager.py  server.py  volcengine_client.py
skills/database-skill/: SKILL.md  pyproject.toml  requirements.txt
skills/database-skill/data/: business_data.xlsx  customer_satisfaction.csv  index.md  inventory_snapshot.parquet  product_categories.json  regional_sales.csv  sales_associates_performance.csv  sales_history.parquet  user_behavior.parquet  web_logs.parquet
skills/database-skill/references/analysis/: api.md  data-exploration.md  data-quality-check.md  eda.md  html-templates.md  index.md  query-database.md  query-file.md  query-multi-source.md  report-style.md  workflow.md
skills/database-skill/references/analysis/templates/: template-bar.md  template-diagnosis.md  template-funnel.md  template-heatmap.md  template-kpi.md  template-line.md  template-map.md  template-pie.md  template-progress.md  template-rank.md  template-table.md  template-tabs.md  template-wordcloud.md
skills/database-skill/references/api/: metadata-query.md  ops.md
skills/database-skill/references/develop/: index.md
skills/database-skill/references/develop/databases/mysql/: ddl-guide.md  dml-guide.md
skills/database-skill/references/develop/databases/postgresql/: ddl-guide.md  dml-guide.md
skills/database-skill/references/metadata/: asset-inventory.md  data-profiling.md  data-quality.md  index.md  schema-audit.md  sensitive-data.md
skills/database-skill/references/ops/: health-inspection.md  index.md
skills/database-skill/references/ops/mongodb/: index.md
skills/database-skill/references/ops/mongodb/scenario/: cluster-failure.md  connection-full.md  connection-leak.md  disk-full.md  lock-wait.md  memory-pressure.md  replication-delay.md  slow-query.md
skills/database-skill/references/ops/mysql/: index.md
skills/database-skill/references/ops/mysql/scenario/: binlog-delay.md  connection-full.md  cpu-spike.md  deadlock.md  disk-full.md  io-bottleneck.md  lock-wait.md  memory-pressure.md  network-jitter.md  replication-delay.md  session-pileup.md  slow-query.md  temp-table-overflow.md
skills/database-skill/references/ops/postgresql/: connection-full.md  cpu-spike.md  disk-full.md  index.md  memory-pressure.md
skills/database-skill/references/ops/redis/: index.md
skills/database-skill/scripts/: analysis_workflow.py  dbw_client.py  multi_source_analyzer.py  toolbox.py
(+648 files in other folders)
