[project]
name = "database-skill"
version = "0.1.2"
description = "Database Skill"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
    "playwright>=1.40.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
