[project]
name = "workshops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "veadk-python @ https://force-workshop.tos-cn-beijing.volces.com/veadk_python-0.2.22.tar.gz",
    "volcengine-python-sdk>=4.0.36", # For Volcengine API
    "agentkit-sdk-python>=0.1.11",
    "lark_oapi"
]
